--- a/.gitmodules
+++ b/.gitmodules
@@ -564,7 +564,7 @@
 	path = src/third_party/intel-wifi-fw-dump
 	url = ../third_party/intel-wifi-fw-dump
 [submodule "chromiumos/third_party/kernel/src/third_party/kernel/upstream"]
-	branch = refs/heads/merge/continuous/chromeos-kernelupstream-5.11
+	branch = refs/heads/merge/continuous/chromeos-kernelupstream-5.12-rc5
 	path = src/third_party/kernel/upstream
 	url = ../third_party/kernel
 [submodule "chromiumos/third_party/kernel/src/third_party/kernel/v3.10"]
