--- a/.gitattributes
+++ b/.gitattributes
@@ -88,6 +88,7 @@
 /src/platform/moblab moblab notdefault
 /src/platform/mosys
 /src/platform/mttools
+/src/platform/satlab notdefault satlab
 /src/platform/tast
 /src/platform/tast-tests
 /src/platform/touch_firmware_test firmware
