--- a/.gitattributes
+++ b/.gitattributes
@@ -29,6 +29,7 @@
 /src/platform/container-guest-tools
 /docs crosvm
 /src/platform/graphyte
+/infra/build/drydock notdefault infra-tools
 /src/platform/empty-project minilayout firmware
 /infra/ci_results_archiver chromeos-admin
 /infra/go chromeos-admin
