--- a/.gitattributes
+++ b/.gitattributes
@@ -25,6 +25,7 @@
 /src/chromium/src/tools/md_browser
 /src/chromium/depot_tools minilayout labtools buildtools firmware
 /chromite minilayout crosvm labtools sysmon buildtools chromeos-admin devserver firmware
+/infra/chromite-HEAD buildtools
 /src/config partner-config config
 /src/platform/container-guest-tools
 /docs crosvm
