Added repo manifest.

--- a/.gitmodules
+++ b/.gitmodules
@@ -599,6 +599,10 @@
 	branch = refs/heads/chromeos-4.4
 	path = src/third_party/kernel/v4.4
 	url = ../third_party/kernel
+[submodule "chromiumos/third_party/kernel/src/third_party/kernel/v5.10-arcvm"]
+	branch = refs/heads/chromeos-5.10-arcvm
+	path = src/third_party/kernel/v5.10-arcvm
+	url = ../third_party/kernel
 [submodule "chromiumos/third_party/kernel/src/third_party/kernel/v5.10"]
 	branch = refs/heads/chromeos-5.10
 	path = src/third_party/kernel/v5.10
