--- a/.gitattributes
+++ b/.gitattributes
@@ -149,6 +149,7 @@
 /src/third_party/kernel/v4.19-manatee
 /src/third_party/kernel/v4.19
 /src/third_party/kernel/v4.4
+/src/third_party/kernel/v5.10-arcvm
 /src/third_party/kernel/v5.10
 /src/third_party/kernel/v5.4-arcvm
 /src/third_party/kernel/v5.4-manatee
