--- a/.gitattributes
+++ b/.gitattributes
@@ -104,6 +104,7 @@
 /src/platform/vboot_reference buildtools firmware
 /src/platform/vkbench
 /src/platform/vpd
+/src/platform/xolabs-common-core notdefault xolabs
 /src/platform/xorg-conf
 /src/platform2 crosvm
 /src/project_public partner-config
